/*
 * Copyright [2021-present] [ahoo wang <ahoowang@qq.com> (https://github.com/Ahoo-Wang)].
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *      http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package me.ahoo.cosec.principal

/**
 * RoleCapable .
 *
 * @author ahoo wang
 */
interface RoleCapable {
    /**
     * get role ids.
     * relation:
     * <pre>
     * [CoSecPrincipal] 1:N [me.ahoo.cosec.tenant.Tenant]
     * [me.ahoo.cosec.tenant.Tenant] 1:N Role
     * [CoSecPrincipal] 1:N Role
     </pre> *
     *
     * @return role ids..
     */
    val roles: Set<String>

    companion object {
        const val ROLE_KEY = "roles"
    }
}
